# Symphonia

./: 1.txt  CONTRIBUTING.md  Cargo.toml
symphonia/: Cargo.toml
symphonia-bundle-flac/src/: demuxer.rs  parser.rs
symphonia-bundle-mp3/src/: demuxer.rs
symphonia-check/: Cargo.toml  README.md  format.txt
symphonia-check/src/: audio.rs  main.rs  mediainfo.rs  video.rs
symphonia-codec-aac/: Cargo.toml
symphonia-codec-aac/src/: adts.rs
symphonia-codec-adpcm/: Cargo.toml
symphonia-codec-alac/: Cargo.toml
symphonia-codec-opus/: Cargo.toml
symphonia-codec-pcm/src/: lib.rs
symphonia-codec-vorbis/src/: codebook.rs
symphonia-codec-wavpack/: Cargo.toml
symphonia-core/src/: units.rs
symphonia-ffi/: Cargo.toml  cbindgen.toml
symphonia-ffi/src/: lib.rs  win.rs  wrap.rs
symphonia-format-caf/: Cargo.toml
symphonia-format-caf/src/: chunks.rs  demuxer.rs
symphonia-format-isomp4/: Cargo.toml
symphonia-format-isomp4/src/: demuxer.rs  stream.rs
symphonia-format-mkv/: Cargo.toml
symphonia-format-mkv/src/: codecs.rs  demuxer.rs  ebml.rs  lacing.rs  lib.rs  tags.rs
symphonia-format-ogg/: Cargo.toml
symphonia-format-riff/: Cargo.toml
symphonia-play/: Cargo.toml
symphonia-play-video/: Cargo.toml
symphonia-regression/: Cargo.toml
symphonia-regression/src/: lib.rs
symphonia-regression/src/tests/: format.rs  packet.rs
symphonia-regression/test_files/audio/good/: 07 commence.mp3.yaml  2.oga.yaml  2.wav.yaml  Nelly Ciobanu - Hora din Moldova.m4a.yaml  cameraclick.caf.yaml  defeat.ogg.yaml  flac_with_id3v2.flac.yaml  full_test.aiff.yaml  untagged.aac.yaml
symphonia-regression/test_files/video/: Avatar.2009.2160p.UHDRemux.Hybrid.HDR.DV-TheEqualizer.mp4.yaml  bunny.mp4.yaml
testc/: main.c
(+56 files in other folders)
