[package]
name = "symphonia-ffi"
version = "0.5.4"
description = "Project Symphonia FFI lib"
homepage = "https://github.com/pdeljanov/Symphonia"
repository = "https://github.com/pdeljanov/Symphonia"
authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
license = "MPL-2.0"
edition = "2021"
rust-version = "1.77"
publish = false

[dependencies]
symphonia = { version = "0.5.4", path = "../symphonia", features = ["all", "opt-simd"] }
windows = { version = "0.59.0", features = [
    "Win32_Media_DirectShow",
    "Win32_System_IO",
    "Win32_System_Threading"
] }

[lib]
name = "symphonia_ffi"
crate-type = ["staticlib"]